tests/ui/parser/issues/issue-68987-unmatch-issue-1.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-68987-unmatch-issue-1.rs:10:1
   |
LL |     match o {
   |             - this delimiter might not be properly closed...
LL |         Some(_x) => {}   // Extra '}'
   |                     -- block is empty, you might have not meant to close it
LL |             let _ = if true {};
LL |         }
   |         - ...as it matches this but it has different indentation
...
LL | }
   | ^ unexpected closing delimiter

error: aborting due to previous error

